--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@
 h1 {
   color: #000000;
   white-space: nowrap;
-  font-size: 120px;
-  font-family: "Helvetica Neue Bold";
+  font-size: 60px;
+  font-family: sans-serif;
   margin-top: -100px;
   text-align: center;
 }
@@ -26,23 +26,36 @@ h1 {
   font-size: 20px;
 }
 
-.jumbo-text {
+/* .jumbo-text {
   font-family: sans-serif;
   display: inline;
   color: #f5f0f0;
   font-size: 20px;
+} */
+.github-link {
+  color: #000000;
+  text-decoration: underline;
 }
 
 h1::after {
   content: "";
   width: 6px;
-  height: 70px;
+  height: 60px;
   color: #000000;
   background: #000000;
   display: inline-block;
   animation: cursor-blink 1.5s steps(2) infinite;
 }
 
+h2::after {
+  content: "";
+  width: 3px;
+  height: 38px;
+  color: #000000;
+  background: #000000;
+  display: inline-block;
+  animation: cursor-blink 1.5s steps(2) infinite;
+}
 .main {
   align-items: center;
   text-align: center;
@@ -51,7 +64,7 @@ h1::after {
 }
 
 h2 {
-  color: #000000;
+  color: #3f3c3c;
   font-family: sans-serif;
   font-size: 40px;
   margin-top: -100px;
@@ -100,6 +113,10 @@ h2 .quotes {
 
 footer {
   margin-top: auto;
+}
+
+.min-jumbotron-width {
+  min-width: 100px;
 }
 
 .jumbtron {
@@ -169,20 +186,20 @@ footer {
   }
 }
 
-@media (min-width: 845px) {
+@media (min-width: 860px) {
   h2 {
-    font-size: 20px; /* Font size for screens larger than 768px */
+    font-size: 50px; /* Font size for screens larger than 768px */
   }
 }
 
 @media (min-width: 1024px) {
   h2 {
-    font-size: 40px; /* Font size for screens larger than 1024px */
+    font-size: 60px; /* Font size for screens larger than 1024px */
   }
 }
 
 @media (min-width: 1280px) {
   h2 {
-    font-size: 50px; /* Font size for screens larger than 1280px */
+    font-size: 70px; /* Font size for screens larger than 1280px */
   }
 }
